# NOVA

./: .gitignore  CHANGELOG.md  EXAMPLES.md  INSTALL.md  LIMITATIONS.md  METRICS.md  METRICS_NET.md  NOTES.md  NOVA_LANGUAGE.md  README.md  ROADMAP_v0.2.md  SPEC.md  agent.dictionary.toon  agent.toon  pyproject.toml
compiler/llvm/: Cargo.toml
compiler/llvm/src/: main.rs
demo/: agent.pack.toon  app.nv  db_sqlite.nv  express_baseline.js  hello_llvm.nv  llvm_db.nv  llvm_serve_profile.nv  scrape_example.nv  scrape_profile.nv
nova/: __init__.py  agent_context.py  ast_utils.py  checker.py  cli.py  db_ir.py  formatter.py  lexer.py  parser.py  runtime.py  toon.py  version.py
nova/backends/: __init__.py  base.py  go.py  interp.py  llvm.py
nova/cap/: __init__.py  db_sqlite.py  html_cap.py  http_cap.py
nova/cap/net/: __init__.py  base.py  browser.py  node.py  node_fetch.mjs  node_worker.mjs  py.py
nova/data/: nova_skill.md
nova/ir/: __init__.py  emit.py  nodes.py  ser.py
nova_lang.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_agent_context.py  test_cap_enforcement.py  test_caps_v013.py  test_checker.py  test_cli_v013.py  test_db_ir.py  test_experimental_cap_scraping.py  test_llvm_native_v014.py  test_net_driver_browser_v016.py  test_net_driver_keepalive_v0151.py  test_net_driver_v015.py  test_roundtrip.py  test_runtime.py  test_toon.py
