[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nova-lang"
version = "0.1.6"
description = "NOVA v0.1 IA-first DSL tooling"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests",
  "beautifulsoup4",
  "playwright",
]

[project.scripts]
nova = "nova.cli:main"

[tool.setuptools.packages.find]
include = ["nova", "nova.*"]

[tool.setuptools.package-data]
"nova.cap.net" = ["*.mjs"]
